add imports to html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
   <head>
     <title>ng2chat</title>
+
+    <!-- ES6 Module loader and SystemJS  -->
+    <script src="jspm_packages/es6-module-loader.js"></script>
+    <script src="jspm_packages/system.js"></script>
+
+    <!-- SystemJS config  -->
+    <script src="config.js"></script>
+
+    <!-- App Startup Script -->
+    <script src="bootstrap.js"></script>
+
   </head>
   <body>
-    hello chat!
+    hello chat!!!
   </body>
 </html>
