--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <!-- ES6 Module loader and SystemJS  -->
     <script src="jspm_packages/es6-module-loader.js"></script>
+    <script src="jspm_packages/traceur-runtime.js"></script>
+
     <script src="jspm_packages/system.js"></script>
 
     <!-- zone.js -->
@@ -12,9 +14,9 @@
 
     <!-- SystemJS config  -->
     <script src="config.js"></script>
+    <script src="index.js"></script>
 
-    <!-- App Startup Script -->
-    <script src="bootstrap.js"></script>
+
 
   </head>
   <body>
@@ -28,5 +30,8 @@
     <chat-app>
       Loading...
     </chat-app>
+
+    <!-- App Startup Script -->
+    <script src="bootstrap.js"></script>
   </body>
 </html>
