--- a/index.html
+++ b/index.html
@@ -1,32 +1,25 @@
 <html>
   <head>
     <title>ng2chat</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
 
-    <!-- ES6 Module loader and SystemJS  -->
-    <script src="jspm_packages/es6-module-loader.js"></script>
-    <script src="jspm_packages/system.js"></script>
 
-    <!-- zone.js -->
-    <script charset="utf-8" src="jspm_packages/github/angular/zone.js@0.4.1/zone.js"></script>
 
+    <script src="https://jspm.io/system.js"></script>
     <!-- SystemJS config  -->
-    <script src="config.js"></script>
+    <script src="system.config.js"></script>
+    <script src="angular2.js" type="text/javascript"></script>
 
-    <!-- App Startup Script -->
+
+
+
     <script src="bootstrap.js"></script>
 
   </head>
-  <body>
-    <div class="navbar-fixed">
-      <nav>
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo"> ng2Chat</a>
-      </div>
-    </nav>
-    </div>
+  <body flex>
     <chat-app>
-      Loading...
+
+
     </chat-app>
   </body>
 </html>
